# nautic-telemetry

./: Cargo.toml  login.json
arduino-collector/: compile_commands.json  platformio.ini
arduino-collector/.cache/clangd/index/: Connection.cpp.CC41382B78D0E565.idx  Connection.h.207E45764BDF8418.idx  FireTimer.cpp.4631FA824A688322.idx  FireTimer.h.4A2457E5AA720110.idx  Logger.cpp.25158EADA4FAC5B5.idx  Logger.h.C2162391641729A5.idx  Packet.h.FA3156FEEE3D9717.idx  PacketVerifier.cpp.C4415B1A2ADE5DA8.idx  PacketVerifier.h.EFFBEEA53A4E6E2A.idx  Protocol.h.44BA8B7B9605B241.idx  Utils.h.F33DEBB7F50FC4C6.idx  main.cpp.F8AFB2383D96E41F.idx
arduino-collector/src/: Utils.cpp  Utils.h  main.cpp
arduino-collector/src/log/: Logger.cpp  Logger.h
arduino-collector/src/radio/: Connection.cpp  Connection.h  Packet.cpp  Packet.h  PacketDeserializer.cpp  PacketDeserializer.h  PacketVerifier.cpp  PacketVerifier.h  Protocol.h
arduino-collector/src/radio/packets/: Master.h  Slave.h
arduino-collector/src/utils/: Cursor.cpp  Cursor.h  Writer.cpp  Writer.h
boat/: .gitignore  platformio.ini
boat/src/: Gpio.h  Utils.cpp  Utils.h  main.cpp
boat/src/log/: Logger.cpp  Logger.h
boat/src/metrics/: Amperimeter.cpp  Amperimeter.h  GPS.cpp  GPS.h  MetricTask.h  Thermistor.cpp  Thermistor.h  Voltimeter.cpp  Voltimeter.h
boat/src/radio/: Connection.cpp  Connection.h  Packet.cpp  Packet.h  PacketDeserializer.cpp  PacketDeserializer.h
boat/src/radio/packets/: Master.h  Slave.h
boat/src/utils/: Allocator.h  Cursor.cpp  Cursor.h  RelayDriver.cpp  RelayDriver.h  Task.h  Vector.cpp  Vector.h  Writer.cpp  Writer.h
crates/libs/commands/: Cargo.toml
crates/libs/commands/src/: lib.rs
crates/libs/queues/: Cargo.toml
crates/libs/queues/src/: commands.rs  lib.rs  telemetry.rs
crates/libs/radio/: Cargo.toml
crates/libs/radio/src/: lib.rs
crates/libs/radio/src/packets/: master.rs  mod.rs  slave.rs
crates/libs/telemetry/: Cargo.toml
crates/libs/telemetry/src/: lib.rs
crates/services/api/: Cargo.toml
crates/services/api/src/: main.rs
crates/services/app/: Cargo.toml  connection.txt
crates/services/app/src/: main.rs
crates/services/app/src/pages/: dashboard.rs  login.rs  mod.rs
crates/services/app/src/style/: button.rs
crates/services/app/src/views/: connection_form.rs  mod.rs
crates/services/influx-feeder/: Cargo.toml  Dockerfile
crates/services/influx-feeder/src/: config.rs  main.rs
crates/services/opi-service/: .env.example  Cargo.toml  cross-compile.sh
crates/services/opi-service/src/: config.rs  main.rs  tagger.rs
radio-receiver/: Cargo.toml  build.sh
radio-receiver/src/: config.rs  main.rs
radio-receiver/src/radio/: mod.rs
radio-receiver/src/radio/packets/: mod.rs  slave.rs
