[package]
name = "radio-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
crc = "3.2.1"
tokio = { version = "1.37.0", features = ["full"] }
tokio-serial = "5.4.4"
