[package]
name = "radio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.2.1"
byteorder = "1.5.0"
bytes = "1.6.0"
tokio-serial = "5.4.4"

anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
