[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }

tokio.workspace = true

lapin.workspace = true
anyhow.workspace = true

telemetry.path = "../../libs/telemetry/"
queues.path = "../../libs/queues/"
