[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12.1", features = ["tokio"] }

bincode.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

tokio.workspace = true
futures.workspace = true

lapin.workspace = true
anyhow.workspace = true

serde.workspace = true
serde_json.workspace = true

telemetry.path = "../../libs/telemetry/"
queues.path = "../../libs/queues/"
iced_aw = { version = "0.8.0", features = ["number_input", "modal"] }
strum = { version = "0.26.2", features = ["derive"] }
